Fix bug: horizontal overflow in extracurricular pg

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@
 }
 
 #root {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+#root,
 header,
 footer,
 .page {
