--- a/src/pages/Extracurricular.css
+++ b/src/pages/Extracurricular.css
@@ -1,9 +1,9 @@
 .extracurricular-page {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+    grid-auto-rows: 18rem;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
 }
 
 .extracurricular-page h1 {
